2012-12-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* SFVec3.h:
	* SFVec4.h:
	* SFVec2.h:
	* MFNode.h:
	* SFNode.h:
	* SFTime.h:
	* Route.h:
	* SFImage.h:
	* X3DField.h:
	* SFColor.h:
	* Viewer.h:
	* SFString.h:
	* SFTime.cpp:
	* Parser.cpp:
	* Route.cpp:
	* Surface.h:
	* SFImage.cpp:
	* X3DScalar.h:
	* Viewer.cpp:
	* SFMatrix4.h:
	* SFMatrix3.h:
	* SFColor.cpp:
	* X3DBaseNode.h:
	* SFString.cpp:
	* X3DWidget.h:
	* X3DViewer.h:
	* Surface.cpp:
	* SFRotation4.h:
	* SFColorRGBA.h:
	* X3DBrowser.h:
	* X3DViewer.cpp:
	* X3DWidget.cpp:
	* X3DArrayField.h:
	* X3DBaseNode.cpp:
	* X3DBrowser.cpp:
	* SFColorRGBA.cpp:
	* X3DRenderer.h:
	* ExternProto.h:
	* ExamineViewer.h:
	* PointingDevice.h:
	* ExamineViewer.cpp:
	* X3DRenderer.cpp:
	* ExternProto.cpp:
	* PointingDevice.cpp:
	* X3DFieldDefinition.h:
	* X3DFieldDefinition.cpp:
	* MotionBlur.h:
	* MotionBlur.cpp:
	* X3DExecutionContext.cpp:
	* X3DLayerNode.cpp:
	* BrowserOptions.cpp:
	* X3DPrototypeInstance.cpp: 

2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Surface.h:
	* Surface.cpp:
	* MotionBlur.h:
	* MotionBlur.cpp:
	* MotionBlur.h:
	* MotionBlur.cpp:
	* BrowserOptions.h:
	* BrowserOptions.cpp: 

2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.cpp: 

2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* X3DBrowser.cpp:
	* Text.cpp:
	* X3DLayerNode.cpp: 

2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* X3DType.h:
	* MFNode.h:
	* SFTime.h:
	* SFNode.h:
	* X3DType.cpp:
	* X3DObject.h:
	* X3DField.h:
	* NodeType.h:
	* X3DArray.h:
	* SFTime.cpp:
	* SFNode.cpp:
	* MFNode.cpp:
	* SFVec4.cpp:
	* Parser.cpp:
	* FieldType.h:
	* SFVec3.cpp:
	* SFVec2.cpp:
	* SFColor.cpp:
	* NodeType.cpp:
	* SFImage.cpp:
	* MFInt32.cpp:
	* X3DObject.cpp:
	* X3DConstants.h:
	* FieldType.cpp:
	* SFString.cpp:
	* X3DBaseNode.h:
	* SFMatrix4.cpp:
	* SFMatrix3.cpp: